--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "SET NODE_ENV=testing& jest --config ./test/jest-e2e.json",
     "test:int": "SET NODE_ENV=testing& jest -i --no-cache --watch --config jest-int.json"
   },
   "dependencies": {
