--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,3 +10,13 @@ jobs:
         run: npm ci
       - name: Unit tests
         run: npm run test
+  lint:
+    needs: [unit-test]
+    runs-on: windows-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm ci
+      - name: Lint
+        run: npm run lint
