--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,21 +2,27 @@ name: Check
 on: push
 jobs:
   unit-test:
+    strategy:
+      matrix:
+        version: [16, 18]
     runs-on: windows-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.version }}
       - name: Install dependencies
         run: npm ci
       - name: Unit tests
         run: npm run test
-  lint:
-    needs: [unit-test]
-    runs-on: windows-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Install dependencies
-        run: npm ci
-      - name: Lint
-        run: npm run lint
+#  lint:
+#    needs: [unit-test]
+#    runs-on: windows-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v3
+#      - name: Install dependencies
+#        run: npm ci
+#      - name: Lint
+#        run: npm run lint
